--- a/CSS/Parciales/_parrafos.scss
+++ b/CSS/Parciales/_parrafos.scss
@@ -2,19 +2,22 @@ p{
     color:rgb(255, 255, 255);
     line-height: 1.6;
     font-size: 15px;
-    font-style:italic;
+    font-style:normal;
     font-family: "open-sans", sans-serif;
     padding: 25px 50px 20px 50px;
-    text-align:justify;
+    text-align:center;
 
     &--clases{
         color: black; 
         font-size: 15px;
-        font-style:italic;
+        font-style:normal;
         font-family: "open-sans", sans-serif;
         padding: 25px 50px 20px 50px;
-        text-align:justify;
-    
-     }
+        text-align:center;
+    }
+    .p--lead{
+        color: white;
+
+    }
     
  }
