--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -6,6 +6,9 @@
 /* elementos delheader */
 @import "../CSS/Parciales/header";
 /* FIN del header */
+/* Inicio NAVBAR */
+@import "../CSS/Parciales/navbar";
+/* FIN del NAVBAR */
 /* Inicio Hero */
 @import "../CSS/Parciales/hero";
 /* Fin de Hero */
@@ -18,3 +21,8 @@
 /* Main secundario */
 @import "../CSS/Parciales/section-main";
 /* Fin de Main secundario */
+/* social icons*/
+@import "../CSS/Parciales/social-icons";
+/* FIN social icons*/
+/* MIXIN*/
+@import "../CSS/Parciales/responsive-mixins"
