--- a/CSS/Parciales/_componentes.scss
+++ b/CSS/Parciales/_componentes.scss
@@ -2,3 +2,12 @@ html{
     font-size: 62.5%;
     background-color: #000000;
 }
+.section__portfolio{
+    display: flex;
+    background: black;
+    background-color: black;
+}
+
+.Footer__text{
+    text-align: center;
+}
