--- a/CSS/Parciales/_hero.scss
+++ b/CSS/Parciales/_hero.scss
@@ -7,7 +7,7 @@
     display:flex;
     background-size: cover;
     position: relative;    
-    text-align: left;
+    text-align: center;
     flex-direction: column;
     align-items: left;
     padding: 0px 0px 0px 30px;
@@ -21,7 +21,7 @@
         display:flex;
         background-size: cover;
         position: relative;    
-        text-align: left;
+        text-align: center;
         flex-direction: column;
         align-items: left;
         padding: 0px 0px 0px 30px;
@@ -32,10 +32,11 @@
         display: flexbox;
         position:center;
         padding: 10px 40px 10px 30px;
-        background-color: rgba(0, 255, 242, 0.57);
-        border-radius: 50px;
-        border-style: none;
-        align-self: center;
+        background: transparent;
+        border: 2px solid #83ff00;
+        color: #83ff00;
+        border-radius: 30%;
+        transition: 0.7s
     
     } 
     
@@ -43,6 +44,7 @@
         position: absolute;
         padding: 130px 10px 10px 50px;
         align-self:flex-start;
+        text-align: center;
     }
 
     &_h4{
@@ -52,3 +54,4 @@
     }
     
 }
+
