añadiento mejoras en los estilos, paginas de contacto, portfolio, proyectos y nosotros.

--- a/CSS/Parciales/_componentes.scss
+++ b/CSS/Parciales/_componentes.scss
@@ -1,6 +1,7 @@
 html{
     font-size: 62.5%;
     background-color: #000000;
+    padding: 0px 0px 0px 0px
 }
 .section__portfolio{
     display: flex;
@@ -10,4 +11,13 @@ html{
 
 .Footer__text{
     text-align: center;
+}
+
+.container{
+    padding: 5rem 0rem 5rem 0rem;
+    
+}
+
+H2>display-6{
+    color: black;
 }
