--- a/CSS/Parciales/_parrafos.scss
+++ b/CSS/Parciales/_parrafos.scss
@@ -16,7 +16,12 @@ p{
         text-align:center;
     }
     .p--lead{
-        color: white;
+        color: black; 
+        font-size: 15px;
+        font-style:normal;
+        font-family: "open-sans", sans-serif;
+        padding: 25px 50px 20px 50px;
+        text-align:center;
 
     }
     
