--- a/CSS/Parciales/_parrafos.scss
+++ b/CSS/Parciales/_parrafos.scss
@@ -4,25 +4,20 @@ p{
     font-size: 15px;
     font-style:normal;
     font-family: "open-sans", sans-serif;
-    padding: 25px 50px 20px 50px;
+    padding: 0px 50px 0px 50px;
     text-align:center;
 
-    &--clases{
-        color: black; 
-        font-size: 15px;
-        font-style:normal;
-        font-family: "open-sans", sans-serif;
-        padding: 25px 50px 20px 50px;
-        text-align:center;
-    }
-    .p--lead{
-        color: black; 
-        font-size: 15px;
-        font-style:normal;
-        font-family: "open-sans", sans-serif;
-        padding: 25px 50px 20px 50px;
-        text-align:center;
-
+ 
     }
     
+    .p--lead{
+        color: black; 
+        font-style: normal;
+        font-family: "open-sans", sans-serif;
+        text-align:start;
+
+    }
+.lead {
+        font-size: 5.25rem;
+        FONT-WEIGHT: 100; 
  }
