--- a/CSS/Parciales/_tipografia.scss
+++ b/CSS/Parciales/_tipografia.scss
@@ -1,15 +1,7 @@
-h1{
-    color:rgb(255, 255, 255); 
-    font-size: 5,25rem;
-    font-style:normal;
-    font-family: "open-sans", sans-serif;
-    padding: 0px;
-} 
- /* primer comentario*/ 
 
- h2{
-    color:rgb(255, 255, 255); 
-    font-size: 30px;
+.inline{
+    color:rgb(0, 0, 0); 
+    font-size: 3.25rem;
     font-style:normal;
     font-family: "open-sans", sans-serif;
     padding: 0px;
@@ -18,4 +10,6 @@ h1{
 }
 .text-center {
     text-align: center!important;
+    
 }
+
