--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -28,4 +28,7 @@
 @import "../CSS/Parciales/cards";
 
 /* Timel */
-@import "../CSS/Parciales/timeline"
+@import "../CSS/Parciales/timeline";
+
+/* Carrousel */
+@import "../CSS/Parciales/carrousel";
