--- a/CSS/Parciales/_cards.scss
+++ b/CSS/Parciales/_cards.scss
@@ -26,7 +26,8 @@ body {
 
 .container-fluid,
 .container {
-    max-width: 1200px;
+    max-width: 100%;
+    padding: 1.5rem 0rem 1.5rem 0rem;
 }
 
 .card-container {
